<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainParentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_100"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/dimen_30"
                android:textStyle="bold"
                android:textColor="@color/appBlue"
                android:text="@string/welcome_msg_tv">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/dimen_12"
                android:textColor="@color/black"
                android:text="@string/welcome_subtitle_tv">
            </TextView>

            <LinearLayout
                android:layout_margin="@dimen/dimen_18"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/email_address_tv"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_20">

                    </TextView>


                    <EditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_45"
                        android:layout_marginTop="@dimen/dimen_14"
                        android:background="@drawable/shape_rect_box_et"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/dimen_20"
                        android:selectAllOnFocus="true">

                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/passwordLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_23"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/password_tv"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_20">

                    </TextView>


                    <EditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_14"
                        android:background="@drawable/shape_rect_box_et"
                        android:drawableRight="@drawable/eye_off"
                        android:drawablePadding="@dimen/dimen_16"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:minHeight="@dimen/dimen_45"
                        android:paddingLeft="@dimen/dimen_20"
                        android:paddingRight="@dimen/dimen_16"
                        android:selectAllOnFocus="true">

                    </EditText>

                </LinearLayout>



                <Button
                    android:id="@+id/loginBT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_50"
                    android:text="@string/login"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold">

                </Button>





            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account">

                </TextView>

                <TextView
                    android:id="@+id/goToRegister"
                    android:layout_marginStart="@dimen/dimen_4"
                    android:textSize="@dimen/text_size_18"
                    android:layout_width="wrap_content"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to_register_bt"
                    android:textColor="@color/appBlue">

                </TextView>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_30">

                <ImageView
                    android:layout_width="@dimen/dimen_200"
                    android:layout_height="@dimen/dimen_120"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:src="@drawable/codezlab_logo">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Powered By"
                    android:textColor="@color/black_90">

                </TextView>
            </RelativeLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>